fixed animation feature on click, fixed alignement

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,4 +27,12 @@ p {
     background: #5a44b2a8;
     margin-right: 90%;
     font-size: 18px;
+    width: max-content;
 }
+.gif {
+  padding: 10px;  
+}
+.superhero-item {
+    float: left;
+    padding: 10px;
+  }
